<resources>
    <string name="app_name">Money</string>

    <string name="title_activity_enter">EnterActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!-- EnterActivity Strings Here -->
    <string name="inviting_enter">Making money is that easy!</string>
    <string name="inviting_sub_enter">All you need is Internet.</string>
    <string name="not_logged_in_enter">You are not logged in! </string>
    <string name="not_logged_in_sub_enter">Please sign up/log in before starting.</string>
    <string name="logged_in_enter">You are logged in as %1$s.</string>
    <string name="logged_in_sub_enter">Tap the button to start earning.</string>
    <string name="button_signUp_enter">Sign Up</string>
    <string name="button_logIn_enter">Log In</string>
    <string name="button_logOut_enter">Log Out?</string>
    <string name="button_start_enter">Start</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_signup">Registered already? Sign in from here</string>
    <string name="action_sign_in_login">Sign In</string>
    <string name="action_register_signup">Register</string>
    <string name="action_register_login">Not Registered? Register Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_number">10 digit Phone Number</string>
    <string name="sign_in_button">Sign In</string>
    <string name="error_invalid_field">Please enter valid details</string>
    <string name="error_invalid_number">Please enter valid 10 digit number</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as %s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_ad_fmt">Welcome %1$s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_forgot_password">forgot \npassword?</string>
    <string name="action_resend_verification_email">verify \nemail?</string>
    <string name="app_icon_description">Money Icon</string>
    <string name="facebook_app_id">249377958810208</string>
    <string name="fb_login_protocol_scheme">fb249377958810208</string>
    <string name="google_client_id">1096603510926-lndm30m5bk5k2ha5kdtimqu7o5oqiiq5.apps.googleusercontent.com</string>

    <!-- Ad activity string -->
    <string name="earnings_text_ad">Total Earnings</string>
    <string name="image_description_ad">Watch images to earn money! You can earn upto Rs. 100 per hour.</string>
    <string name="video_description_ad">Watch videos to earn money! You can earn upto Rs. 200 per hour.</string>
    <string name="image_button_description_ad">Watch Images</string>
    <string name="video_button_description_ad">Watch Videos</string>
    <string name="title_log_out_ad">We will miss you!</string>
    <string name="prompt_bank_name">Bank Name</string>
    <string name="prompt_account_holder_name">Name on bank account</string>
    <string name="prompt_bank_account_no">Account No. or Card No.</string>
    <string name="prompt_ifsc_no">IFSC</string>
    <string name="prompt_country">Country</string>
    <string name="bank_details_description_ad">Please enter your bank account details. We will send
         money to this bank. You can always come here again and edit these details later.</string>

    <!-- Not using these ad templates
    <string name="user_ad_id1">ca-app-pub-2787439686882635/2362051309</string>
    <string name="user_ad_id2">ca-app-pub-2787439686882635/6233847701</string>
    <string name="user_ad_id3">ca-app-pub-2787439686882635/4617513701</string> -->
    <string name="user_ad_id1">ca-app-pub-2787439686882635/6467520106</string>
    <string name="user_ad_id2">ca-app-pub-2787439686882635/7944253303</string>
    <string name="user_ad_id4">ca-app-pub-2787439686882635/7431379309</string>
    <string name="user_ad_id5">ca-app-pub-2787439686882635/4338312103</string>
    <string name="user_ad_id6">ca-app-pub-2787439686882635/1245244905</string>
    <string name="user_ad_id7">ca-app-pub-2787439686882635/6607120900</string>
    <string name="user_ad_id8">ca-app-pub-2787439686882635/9560587307</string>
    <string name="user_ad_id9">ca-app-pub-2787439686882635/2037320506</string>
    <string name="user_ad_id10">ca-app-pub-2787439686882635/9560587307</string>
    <string name="user_ad_id11">ca-app-pub-2787439686882635/2037320506</string>

</resources>

