<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/images_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.developer.jtsingla.money.AdActivity"
    tools:showIn="@layout/app_bar_ad">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="5">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            android:layout_weight="1"
            ads:adUnitId="@string/user_ad_id7">
        </com.google.android.gms.ads.AdView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            android:layout_weight="1"
            ads:adUnitId="@string/user_ad_id8">
        </com.google.android.gms.ads.AdView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            android:layout_weight="1"
            ads:adUnitId="@string/user_ad_id9">
        </com.google.android.gms.ads.AdView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            android:layout_weight="1"
            ads:adUnitId="@string/user_ad_id10">
        </com.google.android.gms.ads.AdView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            android:layout_weight="1"
            ads:adUnitId="@string/user_ad_id11">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>