<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.developer.jtsingla.money.AdActivity"
    tools:showIn="@layout/app_bar_ad">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:dividerPadding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/image_button_ad"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/image_icon_ad"
                android:onClick="image_action_ad"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_button_description_ad"
                android:onClick="image_action_ad"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/image_description_ad"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/video_button_ad"
                android:layout_width="80sp"
                android:layout_height="80sp"
                app:srcCompat="@mipmap/video_icon_ad"
                android:onClick="video_action_ad"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_button_description_ad"
                android:onClick="video_action_ad"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/video_description_ad"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>